Deeplaid V2 - Seles Order Insert, Update, Delete

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SqliteCrud</string>
+    <string name="app_name">Deeplaid ltd.</string>
 
     <array name="departments">
         <item>Technical</item>
